<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SyllabusFragment">

        <TextView
            android:id="@+id/syllabus_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="Syllabus"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/syllabus_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/syllabus_OS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_open_book_24"
                    android:drawablePadding="@dimen/medium_margin"
                    android:paddingStart="@dimen/medium_margin"
                    android:stateListAnimator="@animator/elevate_animator"
                    android:text="@string/operating_system"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/syllabus_button_text"
                    />
                <Button
                    android:id="@+id/syllabus_CG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_open_book_24"
                    android:drawablePadding="16dp"
                    android:paddingStart="@dimen/medium_margin"
                    android:stateListAnimator="@animator/elevate_animator"
                    android:text="@string/computer_graphics"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/syllabus_button_text"
                    android:layout_marginTop="@dimen/margin_tiny"/>
                <Button
                    android:id="@+id/syllabus_CD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_open_book_24"
                    android:drawablePadding="16dp"
                    android:paddingStart="@dimen/medium_margin"
                    android:stateListAnimator="@animator/elevate_animator"
                    android:text="@string/compiler_design"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/syllabus_button_text"
                    android:layout_marginTop="@dimen/margin_tiny"/>
                <Button
                    android:id="@+id/syllabus_CNSC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_open_book_24"
                    android:drawablePadding="16dp"
                    android:paddingStart="@dimen/medium_margin"
                    android:stateListAnimator="@animator/elevate_animator"
                    android:text="@string/cryptography_and_network_security"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/syllabus_button_text"
                    android:layout_marginTop="@dimen/margin_tiny"/>
                <Button
                    android:id="@+id/syllabus_PAP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_open_book_24"
                    android:drawablePadding="16dp"
                    android:paddingStart="@dimen/medium_margin"
                    android:stateListAnimator="@animator/elevate_animator"
                    android:text="@string/python_application_programming"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/syllabus_button_text"
                    android:layout_marginTop="@dimen/margin_tiny"/>
                <Button
                    android:id="@+id/syllabus_OR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_open_book_24"
                    android:drawablePadding="16dp"
                    android:paddingStart="@dimen/medium_margin"
                    android:stateListAnimator="@animator/elevate_animator"
                    android:text="@string/operations_research"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/syllabus_button_text"
                    android:layout_marginTop="@dimen/margin_tiny"
                    android:layout_marginBottom="@dimen/margin_tiny"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
